--- a/README
+++ b/README
@@ -12,4 +12,4 @@ https://en.wikipedia.org/wiki/Mass_murder
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
 
-2002-2021 
+staat der nederlanden ® 2002-2021 
