--- a/README
+++ b/README
@@ -2,8 +2,10 @@
 | socialistisch-profiteren |
 ----------------------------
 
+'guerra sucia'
 
-# neues volj
+
+# neues volk
 https://en.wikipedia.org/wiki/Neues_Volk
 
 # economic wafare
